--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
     <div class="divider"></div>
     <div class="center">
-        <embed class="pdf" src="assets/azardi.pdf#toolbar=0&navpanes=0&scrollbar=0" type="application/pdf" width="50%"
+        <embed class="pdf-azardi" src="https://github.com/BrunoAlm/kennedy_pdf/raw/main/assets/azardi.pdf" type="application/pdf" width="50%"
             height="600px" />
     </div>
     <div class="divider"></div>
