--- a/index.html
+++ b/index.html
@@ -24,10 +24,21 @@
 
     <div class="divider"></div>
 
-    <div class="center">
+    <!-- <div class="center">
         <embed class="pdf" src="assets/janfie-apresentacao.pdf#toolbar=0&navpanes=0&scrollbar=0" type="application/pdf" width="50%"
             height="600px" />
+    </div> -->
+   
+        <div class="center">
+            <button id="prev">Previous</button>
+            <button id="next">Next</button>
+            &nbsp; &nbsp;
+            <span>Page: <span id="page_num"></span> / <span id="page_count"></span></span>
+        </div>
+        <div class="center">
+        <canvas id="the-canvas"></canvas>
     </div>
+
     <div class="divider"></div>
     <div>
         <h3 class="subtitulo">Conteúdo</h3>
@@ -36,10 +47,10 @@
             hendrerit. Aenean sit amet nisi.Atirei o pau no gatis, per gatis num morreus.</p>
     </div>
     <div class="divider"></div>
-    <div class="center">
-        <embed class="pdf-azardi" src="https://github.com/BrunoAlm/kennedy_pdf/raw/main/assets/azardi.pdf" type="application/pdf" width="50%"
+    <!-- <div class="center">
+        <embed class="pdf-azardi" src="https://raw.githubusercontent.com/BrunoAlm/kennedy_pdf/main/assets/CATÁLOGO BRINQUEDOS..pdf" type="application/pdf" width="50%"
             height="600px" />
-    </div>
+    </div> -->
     <div class="divider"></div>
     <h3 class="subtitulo">Mais conteúdo</h3>
     <div class="coluna">
@@ -52,14 +63,15 @@
         <p class="conteudo">Mussum Ipsum, cacilds vidis litro abertis. Mé faiz elementum girarzis, nisi eros
             vermeio.Casamentiss faiz malandris se pirulitá.Posuere libero varius. Nullam a nisl ut ante blandit
             hendrerit. Aenean sit amet nisi.Atirei o pau no gatis, per gatis num morreus.</p>
-      
+
 
     </div>
 
     <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-
+    <script src="//mozilla.github.io/pdf.js/build/pdf.js"></script>
+    <script src="script/script.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
