--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-        <object class="object" type="application/pdf" data="./pdf/Catálogo Brinquedos.pdf?#zoom=85">
-            <p>Insert your error message here, if the PDF cannot be displayed.</p>
-        </object>
+        <div class="embed-responsive" style="padding-bottom:150%">
+            <object data="https://docs.google.com/viewer?url=https://raw.githubusercontent.com/BrunoAlm/kennedy_pdf/main/pdf/Cat%C3%A1logo%20Brinquedos.pdf" type="application/pdf" width="100%" height="100%"></object>
+        </div>
     </body>
 </html>
