--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="embed-responsive" style="padding-bottom:150%">
-            <object data="https://docs.google.com/viewer?url=https://raw.githubusercontent.com/BrunoAlm/kennedy_pdf/main/pdf/Cat%C3%A1logo%20Brinquedos.pdf" type="application/pdf" width="100%" height="100%"></object>
+            <object data="https://raw.githubusercontent.com/BrunoAlm/kennedy_pdf/main/pdf/Cat%C3%A1logo%20Brinquedos.pdf" type="application/pdf" width="100%" height="100%"></object>
         </div>
     </body>
 </html>
