--- a/index.html
+++ b/index.html
@@ -7,8 +7,22 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-        <div class="embed-responsive" style="padding-bottom:150%">
-            <object data="https://raw.githubusercontent.com/BrunoAlm/kennedy_pdf/main/pdf/Cat%C3%A1logo%20Brinquedos.pdf" type="application/pdf" width="100%" height="100%"></object>
-        </div>
+        <div>
+            <object
+              data='./pdf/Catálogo Brinquedos.pdf'
+              type="application/pdf"
+              width="500"
+              height="678"
+            >
+      
+              <iframe
+                src='./pdf/Catálogo Brinquedos.pdf'
+                width="500"
+                height="678"
+              >
+              <p>This browser does not support PDF!</p>
+              </iframe>
+            </object>
+          </div>
     </body>
 </html>
