--- a/kennedy_pdf/index.html
+++ b/kennedy_pdf/index.html
@@ -40,7 +40,7 @@
   </head>
   <body>
     <div id="message">
-      <h2>Welcome</h2>
+      <h2>eagora</h2>
       <h1>Firebase Hosting Setup Complete</h1>
       <p>Doidera</p>
       <a target="_blank" href="https://firebase.google.com/docs/hosting/">Open Hosting Documentation</a>
