--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
       });
     </script>
 
-<script src="lib/webviewer.min.js"></script>
+<script src="./lib/webviewer.min.js"></script>
 <script>
   WebViewer({
-    path: 'lib', // path to the PDF.js Express'lib' folder on your server
+    path: './lib', // path to the PDF.js Express'lib' folder on your server
     licenseKey: 'DjwfY4RyDf2qMOTmy41z',
     // initialDoc: 'https://pdftron.s3.amazonaws.com/downloads/pl/webviewer-demo.pdf',
     initialDoc: 'pdf/Catálogo Brinquedos.pdf',  // You can also use documents on your server
